--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
+	<pre id="arrayData"></pre>
     <script type="text/javascript" src="./script.js">
 </script>
 
